## Change log

### 1.3.1 - In Development
* Dev - Added in a parameter to lsx_to_enquire_modal() to allow a form_id to be specified

### 1.3.0 - 2 October 2019
* Fix - Fixed the Post Type enquiry dropdown.
* Dev - Added in a view more disable for the post type widget
* Dev - Adding the .gitattributes file to remove unnecessary files from the WordPress version.
* Dev - Added in a 'lsx_to_maps_args' to allow plugins to alter the map arguments before output.
* Dev - Added in a 'lsx_to_has_maps_location' to allow plugins to alter the map arguments before output.
* Dev - Added lazyloading for the TO Slick sliders.
* Dev - Added in a 'lsx_to_map_override' to allow 3rd party plugins to overrider the map before it generates.
* Dev - Changing the single template width.
* Dev - Added the possibility to call the form set on the options of each post type if the archive page requires it.
* Dev - Updated the compatible version notice
* Dev - Added in the Schema for accommodation / destinations / tours, using the Yoast API.
* Fix - Fix for the reviews thumbnails.
* Fix - Making 'Best Time' show only if it has content.
* Fix - Updating the gallery thumbnail image size.
* Fix - Fixing PHP issue 'Invalid argument supplied for foreach()'.
* Fix - Changing the priority of the enqueued assets.

### 1.2.0 - 6 August 2019
* Fix - Hiding the banner title on regions when the map is set to output there.
* Dev - Made sure the regions also move the map to the banner when the setting is activated.
* Dev - PHP Class updates.
* Dev - Removing old templates.
* Dev - Integrated the TO Maps plugin into TO Core.
* Dev - Added in an option to disable the maps.
* Dev - Added in a desktop and mobile map placeholder setting.
* Dev - Added in the bot blocker function for google maps requests.
* Dev - Integrated the TO Videos plugin into TO Core.
* Fix - Fixed the Room Section not collapsing on mobile.
* Fix - Fixed the collapse section title colour on mobile.