@@ -2,6 +2,7 @@
 
 ### 1.3.1 - In Development
 * Dev - Added in a parameter to lsx_to_enquire_modal() to allow a form_id to be specified
+* Dev - Allowing the modal to be disabled in lsx_to_enquire_modal via a parameter
 
 ### 1.3.0 - 2 October 2019
 * Fix - Fixed the Post Type enquiry dropdown.
